tests/error/empty_ptr.gw
#! [contains] EmptyPointerException
<~int~>Ptr t;
<<< *t >>>;
